# ExampleProjects

./: .editorconfig  LICENSE  README.md
src/CsHelloWorld/: CsHelloWorld.sln  Program.cs
src/CsMultiStart/: CsMultiStart.sln  README.md
src/CustomMessaging/: Common.props  CustomMessaging.sln  README.md
src/DebugEngineEvalSample/: DebugEngineEvalSample.csproj  DebugEngineEvalSample.sln  DebugEngineEvalSamplePackage.cs  DebugEngineEvalSamplePackage.vsct  EvaluationFailedException.cs  README.md  TriggerAsyncEval.cs  TriggerSyncEval.cs  VSUtilities.cs  _EvaluationHelper.cs  source.extension.vsixmanifest
src/DebuggerEvents/: DebuggerEvents.csproj  DebuggerEvents.sln  DebuggerEventsPackage.cs  README.md  source.extension.vsixmanifest
src/IsInExpressionEvaluation/: IsInExpressionEvaluation.sln  README.md  SharedMemoryConstants.cs
src/LaunchNotifyListenerExample/: LaunchNotifyListenerExample.sln  README.md
src/LinuxClangHelloWorld/: CMakeLists.txt  HelloWorld.cpp  README.md  build.sh
src/LinuxDotnetInteropExample/: CollectDumps.sh  LinuxDotnetInteropExample.sln  README.md  build.sh
src/LinuxDotnetInteropExample/MyNativeLib/: CMakeLists.txt  Lib.cpp
src/NatVisFuncEvalExample/: ExampleClass.natvis  NatVisFuncEvalExample.cpp  NatVisFuncEvalExample.sln  NatVisFuncEvalExample.vcxproj  NatVisFuncEvalExample.vcxproj.filters  README.md
src/RelaunchForeverTest/: README.md  RelaunchForeverCommand.cs  RelaunchForeverRunner.cs  RelaunchForeverTest.csproj  RelaunchForeverTest.sln  RelaunchForeverTestPackage.cs  RelaunchForeverTestPackage.vsct  source.extension.vsixmanifest
(+48 files in other folders)
